docs: checkpoint Android durable runtime and enter notification transport